--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sitong Lu"
-  avatar           : "profile.png"
+  avatar           : "headshot.jpg"
   bio              : "A second year master's student majoring in computer science at CU Boulder."
   location         : "Boulder, CO"
   employer         :
