--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sitong Lu"
   avatar           : "headshot.jpg"
-  bio              : "A second year master's student majoring in computer science at CU Boulder."
+  bio              : "A second year master's student majoring in Computer Science at CU Boulder."
   location         : "Boulder, CO"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
