--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,8 @@
 # main links links
-main:      
+main:    
+  - title: "About"
+    url: /about/
+    
   - title: "Portfolio"
     url: /portfolio/
     
