--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sitong Lu"
 title_separator          : "-"
 name                     : &name "Sitong Lu"
-description              : &description "A second year master's student majoring in computer science at CU Boulder."
+description              : &description "A second year Master's student majoring in Computer Science at CU Boulder."
 url                      : https://akitomoya616.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "akitomoya616/akitomoya616.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sitong Lu"
   avatar           : "headshot.jpg"
-  bio              : "A second year master's student majoring in Computer Science at CU Boulder."
+  bio              : "A second year Master's student majoring in Computer Science at CU Boulder."
   location         : "Boulder, CO"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
