--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sitong Lu"
   avatar           : "headshot.jpg"
-  bio              : "A second year Master's student majoring in Computer Science at CU Boulder. \n修士課程2年生、アメリカのコロラド大学ボルダー校のエンジニアリング学部でコンピューターサイエンスを専攻しています。"
+  bio              : "A second year Master's student majoring in Computer Science at CU Boulder. | 修士課程2年生、アメリカのコロラド大学ボルダー校のエンジニアリング学部でコンピューターサイエンスを専攻しています。"
   location         : "Boulder, CO"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
